kubernetes-tiny-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tiny-api
  labels:
    name: tiny-api
