kubernetes-tiny-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiny-api-deployment
  namespace: tiny-api
  labels:
    app: tiny-api
spec:
  replicas: 5
  revisionHistoryLimit: 4
  selector:
    matchLabels:
      app: tiny-api
  template:
    metadata:
      namespace: tiny-api
      labels:
        app: tiny-api
    spec:
      containers:
        - name: tiny-api
          image: stubin87/tiny-api:v1.3.0
          ports:
            - containerPort: 9001
          livenessProbe:
            httpGet:
              path: /health
              port: 9001
            initialDelaySeconds: 10
            periodSeconds: 60
