kubernetes-tiny-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tiny-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - tiny.api.lb.serj-tubin.com
    - tiny.api.lb.2beens.xyz
    secretName: tiny-api-tls
  rules:
  - host: "tiny.api.lb.serj-tubin.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tiny-api-clusterip-service
            port:
              number: 80
